2014-02-23 MickeM
 * Changed so uniq is default for eventlog checks (if no arguments are given)
 * Fixed drives so they are more sensible
 * Added drive_or_id and drive_or_name to configure the default "id" of drives.
 * Fixed so legacy MaxWarn/MinWarn/MaxCrit/MinCrit are treated like >= and <= (which is the original behaviour)
 * Changed so default "help" if invalid syntax is the short version.
 * Removed erronouse logging when shutting down sockets
 * Tweaked console output a bit
 * Fixed check_uptime overflow issue
 
2014-01-25 MickeM
 * Fixed FILEAGE check_nt command #480, #636, #642, #39 (and others)
 * Fixed delayed start issue in check_service #681
 * Fixed not regexp issue #651
 * Fixed default service name
 * Fixed issue with scan-range #683
 * Fixed uptime performance alias (and added unit s) #688
 * Fixed issue with CkeckCPU show-all: #687
 * Fixed issue with check_ping.bat #635
 * Fixed documentation for nsca hostname #690
 * Fixed validation issues with lists #605
 * Fixed so external script errors are reported againast the alias not the command #677

2014-01-04 MickeM
 * Numerous bugfixes and compatiblity fixes
 * Gone over all unit tests to make sure they run

2013-12-23 MickeM
 * Added support for unique
 * Fixed unique and debug flags in CheckEventLog

2013-12-20 MickeM
 * Fixed issue with check_nt and units beeing reounded to nearest bg, mg, kb, etc)
 * Added support for configuring performance data

2013-12-18 MickeM
 * Fixed source in new eventlog
 * Added truncate-message option to check eventlog to truncate the message
 * Added filtering of cr,lf in eventlog messages
 * Fixed performance data naming in event log

2013-12-10 MickeM
 * renamed "full config" sample to reduce confusion.
 * Fixed numerous issues with check_files and CheckFiles (now all CheckFiles unit test work as expected)
 
2013-12-09 MickeM
 * Fixed a crash in handling ${status} in some filters.
 * Added check_nrpe to the installer