@@ -220,7 +220,7 @@ SET(CONFIG_DEFAULT_SERVICE_DESC "Monitoring Agent (Provides performance data for
 SET(CONFIG_DEFAULT_SERVICE_DEPS "" CACHE STRING "Any service dependencies to use for the default service")
 
 SET(CONFIG_CRASH_SUBMIT_URL "http://crash.nsclient.org/submit" CACHE STRING "Where to submit crash dump files")
-SET(CONFIG_CRASH_ARCHIVE_FOLDER "${shared-path}/crash-dumps" CACHE STRING "Where to archive chras dump files on the local filesystem")
+SET(CONFIG_CRASH_ARCHIVE_FOLDER "\${shared-path}crash-dumps" CACHE STRING "Where to archive chras dump files on the local filesystem")
 
 IF(WIN32)
 	SET(CONFIG_DEFAULT_CONF_LOCATION "old" CACHE STRING "Default configuration store")
